syntax = "proto3";
package kratos.api;

option go_package = "github.com/gomicroim/go-timeline/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Mongo {
    string source = 1;
    string chat_database = 2;
    string sync_chat_collection = 3;
    string history_chat_collection = 4;
  }
  message Redis {
    string addr = 1;
    string password = 2;
    int32 db = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  Mongo mongo = 1;
  Redis redis = 2;
}
